@@ -1,2 +1,6 @@
+<DIV CLASS="indent">
+
 <P>Class <A HREF="/classes/{printer_name}">{printer_name}</A> has been
 modified successfully.
+
+</DIV>
