@@ -1,3 +1,7 @@
+<DIV CLASS="indent">
+
 <P>Error:</P>
 
 <BLOCKQUOTE>Unknown operation "{op}"!</BLOCKQUOTE>
+
+</DIV>
