@@ -1,3 +1,7 @@
+<DIV CLASS="indent">
+
 <P>{?message?{message}:Error:}</P>
 
 <BLOCKQUOTE>{error}</BLOCKQUOTE>
+
+</DIV>
