@@ -1,2 +1,6 @@
+<DIV CLASS="indent">
+
 <P>Maintenance commands sent; job ID is <A HREF="/printers/{printer_name}">
 {printer_name}-{job_id}</A>.</P>
+
+</DIV>
