@@ -1,2 +1,6 @@
+<DIV CLASS="indent">
+
 <P>Printer <A HREF="/printers/{printer_name}">{printer_name}</A> has been added
 successfully.
+
+</DIV>
