@@ -1,2 +1,6 @@
+<DIV CLASS="indent">
+
 <P>{OP=set-class-options?Class <A HREF="/classes/{printer_name}">:Printer <A HREF="/printers/{printer_name}">}{printer_name}</A> has
 been configured successfully.
+
+</DIV>
