@@ -1,4 +1,8 @@
+<DIV CLASS="indent">
+
 <P><B>Warning:</B> Are you sure you want to delete printer
 {printer_name}?</P>
 
 <P ALIGN="CENTER"><FORM ACTION="/admin/" METHOD="POST"><INPUT TYPE="HIDDEN" NAME="OP" VALUE="delete-printer"><INPUT TYPE="HIDDEN" NAME="printer_name" VALUE="{printer_name}"><INPUT TYPE="SUBMIT" NAME="confirm" VALUE="Delete Printer"></FORM></P>
+
+</DIV>
