@@ -1,3 +1,5 @@
+<DIV CLASS="indent">
+
 <P>{is_class?Class:Printer} <A
 HREF="/{is_class?classes:printers}/{printer_name}">{printer_name}</A>
 has been made the default printer on the server.</P>
@@ -5,3 +7,5 @@ has been made the default printer on the server.</P>
 <BLOCKQUOTE><B>Note:</B> Any user default that has been set via
 the <TT>lpoptions</TT> command will override this default
 setting.</BLOCKQUOTE>
+
+</DIV>
