@@ -1,1 +1,5 @@
+<DIV CLASS="indent">
+
 <P>Printer {printer_name} has been deleted successfully.
+
+</DIV>
