@@ -1,3 +1,7 @@
+<DIV CLASS="indent">
+
 <P>{is_class?Class:Printer} <A
 HREF="/{is_class?classes:printers}/{printer_name}">{printer_name}</A>
 has been stopped.</P>
+
+</DIV>
