@@ -1,1 +1,5 @@
+<DIV CLASS="indent">
+
 <P>Subscription {subscription_name} has been added successfully.</P>
+
+</DIV>
