@@ -1,1 +1,5 @@
+<DIV CLASS="indent">
+
 <P>Subscription #{notify_subscription_id} has been canceled.</P>
+
+</DIV>
