@@ -1,3 +1,5 @@
+<DIV CLASS="indent">
+
 <FORM METHOD="POST" ACTION="/admin">
 <INPUT TYPE="HIDDEN" NAME="OP" VALUE="{OP}">
 <INPUT TYPE="HIDDEN" NAME="PRINTER_NAME" VALUE="{printer_name}">
@@ -24,3 +26,4 @@
 </TABLE>
 
 </FORM>
+</DIV>
